--- a/css/style.css
+++ b/css/style.css
@@ -489,14 +489,9 @@ header nav{
     top:140px;
     color:#fff;
     font-size:30px;
-}
-.link__recruit h4 {
-
-    left: 315px;
-}
-
-.link__interview h4 {
-    left: 250px;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
 }
 
 .inquiry{
